# community-bots

./: .env.cf.local.example  .env.example  .env.local.example  .gitignore  AGENTS.md  README.md  STRATEGY.md  analyze_source_metadata.py  package.json  requirements-trask-research.txt
.github/: FUNDING.yml
docs/: PAZAAKWORLD_DEVELOPER_GUIDE.md  PAZAAKWORLD_ENHANCEMENTS.md  PAZAAKWORLD_IMPLEMENTATION_SUMMARY.md  architecture.md  pazaak-bot.md  pazaak-oauth-providers.md  pazaak-reverse-engineering.md  pazaak-vendor-parity.md  pazaak-world-hosting.md  pazaak-world-testing-report.md  setup.md  trask-ops.md  trask-research-backends.md  trask.md  tsl-cd-1.0-vs-1.0b-patch-analysis.md
infra/trask-indexer/: Dockerfile  README.md  pyproject.toml
infra/trask-indexer/tests/: test_allowlist.py  test_chroma_query.py  test_chunk.py
infra/trask-indexer/trask_indexer/: __init__.py  allowlist.py  chroma_store.py  chunk.py  cli.py  crawl.py  discord_index.py  embed.py  retrieve_api.py
infra/trask-indexer/trask_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bootstrap_trask_gpt_researcher.sh  bootstrap_trask_indexer.sh  bootstrap_trask_research.ps1  bootstrap_trask_research.sh  check_trask_config_drift.mjs  discord-install-links.ts  discord_ask_display_proof.mjs  discord_fetch_trask_env.mjs  discord_fetch_trask_token.mjs  discord_get_tokens.mjs  discord_setup_wizard.mjs  discord_wait_token_and_start.sh  export_discord_channel.py  export_discord_server.py  export_trask_allowlist_catalog.mjs  gh-cloudflare-push-secrets-and-deploy.ps1  (+38 more)
(+174 files in other folders)
