[project]
name = "trask-indexer"
version = "0.1.0"
description = "Crawl4AI + FastEmbed + Chroma indexer for Trask / Holocron"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crawl4ai>=0.6.0",
  "fastembed>=0.6.0",
  "chromadb>=0.6.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
trask-indexer = "trask_indexer.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trask_indexer*"]
